stackoverkata_jm-dev/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stackoverkata
  labels:
    app: stackoverkata
spec:
  replicas: 3
  selector:
    matchLabels:
      app: stackoverkata
  template:
    metadata:
      labels:
        app: stackoverkata
    spec:
      containers:
        - name: stackoverkata
          image: sibiha/stackoverkata_jm:1.0.1
          ports:
            - containerPort: 8080
