stackoverkata_jm-dev/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: port-forward-pod
spec:
  containers:
    - name: port-forward-container
      image: alpine:latest
      command: ["sleep", "3600"]
      ports:
        - containerPort: 8080
        - containerPort: 8899
