stackoverkata_jm-dev/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stackoverkata
spec:
  selector:
    app: stackoverkata
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
 # type: LoadBalancer

# kubectl cluster-info

# kubectl get services
# kubectl delete service stackover
